k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: x-front-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: x-front.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: x-front-service
                port:
                  number: 80
